Dodawanie listy użytkowników dla projektu.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,6 @@
 
 <footer class="footer">
   <div class="container">
-    <span>All Rights Reserved 2019 @JavaGuides</span>
+    <span>Marcin @JavaAngularTogether</span>
   </div>
 </footer>
